<resources>
    <string name="app_name" translatable="false">WeatherMood</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_alert">Alert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="app_name_nav">Weather Mood</string>
    <string name="menu_setting">Setting</string>
    <string name="daily">Daily</string>
    <string name="hourly">Hourly</string>
    <string name="pick">pick</string>
    <string name="close">close</string>
    <string name="mapHome">Maps</string>
    <string name="LocationHome">GPS</string>
    <string name="empty_list">No Location Added</string>
    <string name="tryAgain">try Again please</string>
    <string name="undo">Undo</string>
    <string name="weHadIssue">We had issue please try later</string>
    <string name="serverHadIssue">The sever had issue please try later</string>
    <string name="lastUpdate"> last update </string>
    <string name="address">Address</string>
    <string name="today">Today</string>
    <string name="location">Location</string>
    <string name="units">Units</string>
    <string name="kelvin">Kelvin , metre/sec</string>
    <string name="celsius">Celsius , metre/sec</string>
    <string name="fahrenheit">Fahrenheit , miles/hour</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="clouds">Clouds</string>
    <string name="version">version 1.0.0</string>
    <string name="no_alert"> No alert added</string>
    <string name="startItme">From</string>
    <string name="time_to">To</string>

    <string name="alert">Alert</string>
    <string name="notification">Notification</string>
    <string name="selectTime">Select TIme</string>
    <string name="selectDate">Select Date</string>
    <string name="massgeErrorForEnterTimeAndDate">Please enter date and time</string>
    <string name="rain">Rain</string>
    <string name="storm">Storm</string>
    <string name="heat">Heat</string>
    <string name="snow">Snow</string>
    <string name="heat_advisory">Heat Advisory</string>
    <string name="fog">Fog</string>
    <string name="cloud">Cloud</string>
    <string name="wind">Wind</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="alertType">Alert type</string>
    <string name="eventType">Event </string>
    <string name="channel_name">Weather mood notification</string>
    <string name="channel_description">Alert Notification</string>
    <string name="header_notification">"Weather Alarm"</string>
    <string-array name="events_options">
        <item>@string/rain</item>
        <item>@string/storm</item>
        <item>@string/heat_advisory</item>
        <item>@string/heat</item>
        <item>@string/snow</item>
        <item>@string/fog</item>
        <item>@string/cloud</item>
        <item>@string/wind</item>
    </string-array>
</resources>