<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/twotone_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/twotone_favorite_24"
            android:title="@string/menu_favourite" />
        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/twotone_add_alert_24"
            android:title="@string/menu_alert" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/twotone_settings_24"
            android:title="@string/menu_setting" />
    </group>
</menu>