<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.weathermood.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_splashFragment"
            app:destination="@id/nav_splash" />
    </fragment>

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.weathermood.gallery.GalleryFragment"
        android:label="@string/menu_favourite"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_alert"
        android:name="com.example.weathermood.slideshow.SlideshowFragment"
        android:label="@string/menu_alert"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_splash"
        android:name="com.example.weathermood.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.weathermood.Setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>